# raylib-boilerplate

./: .clang-format  .gitignore  3  CMakeLists.txt  CMakeLists.txt.mac  CMakeLists.txt.win  README.md  bear.sh  compile_commands.json  history.txt
android/: settings.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/app/curl-8.11.1_2-win64-mingw/curl-8.11.1_2-win64-mingw/: BUILD-HASHES.txt  BUILD-MANIFEST.txt
android/app/release/: output-metadata.json
android/app/release/baselineProfiles/0/: app-release.dm
android/app/release/baselineProfiles/1/: app-release.dm
android/app/src/androidTest/java/com/example/rootsofevil/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: resources
android/app/src/main/java/com/example/rootsofevil/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/rootsofevil/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
game/: todo.txt
game/include/: ParticleSystem.h  Quad.h  RandomGenerator.h  StringMap.h  animation.hpp  camera.h  config.h  draft.h  int.h  jni.h  shake.h  state.hpp  state_machine.hpp  state_params.hpp  timer.h  transformation_stack.h  vertex.h
game/include/gperftools/: heap-checker.h  heap-profiler.h  malloc_extension.h  malloc_extension_c.h  malloc_hook.h  malloc_hook_c.h  stacktrace.h  tcmalloc.h
game/src/: ParticleSystem.cpp  Quad.cpp  RandomGenerator.cpp  add_tower.cpp  add_warriors.cpp  animation.cpp  archer.cpp  archery.cpp  archery_summon.cpp  arrow.cpp  attack_tower.cpp  audio.cpp  audio_manager.cpp  barrack.cpp  building.cpp  camera.cpp  castle.cpp  chance_list.cpp  cine_experience.cpp  cinematographer.cpp  collider_factory.cpp  contact_listener.cpp  container.cpp  dead_body.cpp  debug_draw.cpp  defence_tower.cpp  draft.cpp  enemy.cpp  enemy_horde.cpp  enemy_shield_bearer.cpp  enemy_types.cpp  enemy_wave.cpp  enemy_wave_config.cpp  fire_ball.cpp  firebase.cpp  formation.cpp  game.cpp  game_object.cpp  gameover.cpp  gems.cpp  (+58 more)
game/src/include/: add_tower.hpp  add_warriors.hpp  archer.hpp  archer_state_params.hpp  archery.hpp  archery_summon.hpp  arrow.hpp  attack_tower.hpp  audio.h  audio_manager.hpp  barrack.hpp  body_deleter.h  building.hpp  building_data.hpp  camera_transition.hpp  castle.hpp  chance_list.hpp  cine_experience.hpp  cinematographer.hpp  collectible.hpp  collider_factory.hpp  collider_user_data.h  constants.h  container.h  dead_body.h  debug_draw.hpp  defense_tower.hpp  direction.hpp  enemy.hpp  enemy_horde.hpp  enemy_shield_bearer.hpp  enemy_state_params.hpp  enemy_types.h  enemy_wave.hpp  enemy_wave_config.hpp  fire_ball.hpp  firebase.hpp  formation.h  game.h  game_object.h  (+65 more)
game/src/include/states/archer/: idle.hpp  play_animation.hpp
game/src/include/states/enemy/: attack.hpp  cooldown.hpp  run.hpp
game/src/include/states/warrior/: attack.hpp  idle.hpp  run.hpp  seeking.hpp
game/src/states/archer/: idle.cpp  play_animation.cpp
game/src/states/enemy/: attack.cpp  cooldown.cpp  run.cpp
game/src/states/warrior/: attack.cpp  idle.cpp  run.cpp  seeking.cpp
